fixed button looking off on Safari

--- a/code/src/components/Start.css
+++ b/code/src/components/Start.css
@@ -18,6 +18,8 @@
     border-radius: 0.6em;
     line-height: 1.4em;
     border: 2px solid rgb(0, 0, 0);
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
 .description {
